implementes application and company routers
