# openapi/openapi.spec.json
@@ -1,6 +1,168 @@
 {
   "openapi": "3.0.0",
   "paths": {
+    "/api/company/register": {
+      "post": {
+        "operationId": "CompanyController_register",
+        "summary": "Register a new company.",
+        "description": "This endpoint register a new company.",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "description": "The registration details for the new company.",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Company"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "The company was successfully registered.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Company"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "A company with this description already exists"
+          }
+        },
+        "tags": [
+          "company"
+        ]
+      }
+    },
+    "/api/company/list": {
+      "get": {
+        "operationId": "CompanyController_list",
+        "summary": "Get the list of companies",
+        "description": "This endpoint get the list of companies",
+        "parameters": [],
+        "responses": {
+          "302": {
+            "description": "The list of companies was returned"
+          }
+        },
+        "tags": [
+          "company"
+        ]
+      }
+    },
+    "/api/company/{id}": {
+      "get": {
+        "operationId": "CompanyController_find",
+        "summary": "Get a company",
+        "description": "This endpoint get a company",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "302": {
+            "description": "The company was succesfully founded"
+          },
+          "404": {
+            "description": "Company not found"
+          }
+        },
+        "tags": [
+          "company"
+        ]
+      }
+    },
+    "/api/application/register": {
+      "post": {
+        "operationId": "ApplicationController_register",
+        "summary": "Register a new application.",
+        "description": "This endpoint register a new application.",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "description": "The registration details for the new application.",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Application"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "The application was successfully registered.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Application"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "A application with this code already exists"
+          }
+        },
+        "tags": [
+          "application"
+        ]
+      }
+    },
+    "/api/application/list": {
+      "get": {
+        "operationId": "ApplicationController_list",
+        "summary": "Get the list of applications",
+        "description": "This endpoint get the list of applications",
+        "parameters": [],
+        "responses": {
+          "302": {
+            "description": "The list of applications was returned"
+          }
+        },
+        "tags": [
+          "application"
+        ]
+      }
+    },
+    "/api/application/{id}": {
+      "get": {
+        "operationId": "ApplicationController_find",
+        "summary": "Get a application",
+        "description": "This endpoint get a application",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "302": {
+            "description": "The application was succesfully founded"
+          },
+          "404": {
+            "description": "Application not found"
+          }
+        },
+        "tags": [
+          "application"
+        ]
+      }
+    },
     "/api": {
       "get": {
         "operationId": "AppController_getHello",
@@ -12,7 +174,7 @@
         }
       }
     },
-    "/api/profile": {
+    "/api/auth/profile": {
       "get": {
         "operationId": "AuthController_profile",
         "parameters": [],
@@ -26,7 +188,7 @@
         ]
       }
     },
-    "/api/login": {
+    "/api/auth/login": {
       "post": {
         "operationId": "AuthController_login",
         "summary": "Login user and return access token.",
@@ -63,7 +225,7 @@
         ]
       }
     },
-    "/api/register": {
+    "/api/auth/register": {
       "post": {
         "operationId": "AuthController_register",
         "summary": "Register a new user.",
@@ -186,6 +348,50 @@
       }
     },
     "schemas": {
+      "Company": {
+        "type": "object",
+        "properties": {
+          "description": {
+            "type": "string",
+            "description": "Unique identifier of the company.",
+            "example": "Baron Pesi Srl"
+          },
+          "cell": {
+            "type": "object",
+            "description": "The cell of company.",
+            "example": "123456789"
+          },
+          "cfpiva": {
+            "type": "object",
+            "description": "The CFPIVA of the company.",
+            "example": "IJSRGOERNONBOB"
+          }
+        },
+        "required": [
+          "description",
+          "cell",
+          "cfpiva"
+        ]
+      },
+      "Application": {
+        "type": "object",
+        "properties": {
+          "description": {
+            "type": "string",
+            "description": "Unique identifier of the application.",
+            "example": "App to manage all weighing datas"
+          },
+          "code": {
+            "type": "string",
+            "description": "The code of the application.",
+            "example": "APP001"
+          }
+        },
+        "required": [
+          "description",
+          "code"
+        ]
+      },
       "LoginBodyDto": {
         "type": "object",
         "properties": {
